# wallet-tracer

./: .gitignore  README.md  implementation.md  pyproject.toml
scripts/: build_token_dataset.py  build_wallet_dataset.py  eval_token_model.py  eval_wallet_model.py  train_token_model.py  train_wallet_model.py
src/tracer/adapters/chain/: etherscan_chain_adapter.py  rate_limiter.py  static_chain_adapter.py
src/tracer/adapters/pricing/: price_adapter.py
src/tracer/adapters/risk/: dexscreener_adapter.py  token_risk_adapter.py  wallet_risk_ml_adapter.py
src/tracer/cli/: main.py
src/tracer/config/: settings.py
src/tracer/core/: dto.py  enums.py  errors.py  models.py
src/tracer/io/: output_writer.py  schemas.py
src/tracer/ml/: __init__.py  model_loader.py  token_features.py  token_scorer.py  training.py  wallet_features.py  wallet_scorer.py
src/tracer/ports/: chain_data_port.py  price_port.py  token_risk_port.py  wallet_risk_port.py
src/tracer/services/: tracer_service.py
tests/: test_tracer_service.py
