[project]
name="wallet-tracer"
version="1.0.0"
dependencies = [
    "dotenv>=0.9.9",
    "joblib>=1.4.2",
    "pandas>=2.2.0",
    "requests>=2.32.5",
    "scikit-learn>=1.5.0",
    "uvicorn>=0.39.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
